# plotly_bot

./: .gitignore  Dockerfile  README.md  _main.py  _serv.py  alembic.ini  bot.conf  codespaces  log.ini  pyproject.toml  start_bot.sh
demo/: __init__.py
docs/: 404.html  search.js  src.html
docs/src/: app.html  core.html  db.html  handlers.html  kb.html  messages.html  parser.html  scheduler.html  scripts.html  states.html  text.html  wg.html
docs/src/core/: config.html  err.html  exceptions.html  log_cfg.html  metric.html  path.html
docs/src/db/: database.html  ddl.html  models.html  utils.html
docs/src/handlers/: account.html  admin.html  ban.html  bug.html  group.html  info.html  payment.html  user_service.html  utils.html  wg_service.html
docs/src/scheduler/: balance.html  config_freezer.html  dump.html  notices.html
docs/src/scripts/: authorize.html  create_docs.html  db_backup.html  db_dump.html  db_recover.html  db_recreate.html  jwt_secret.html
docs/src/wg/: IPgen.html  connect.html  pywg.html  utils.html
server/: bot.md  bot_subserver.conf  err.py  form.py  log.ini  main.py  shared.py
server/fast_pages/: auth.py  form.py  main.py  reports.py  shared.py  tables.py
server/pages/: auth.py  docs.py  form.py  index.py  main.py  pricing.py  profile.py  reports.py  shared.py  tables.py
server/static/: Logo.pdn  promo.pdn  styles.css
server/static/css/: auth.css  error.css  navbar.css  profile.css  styles.css
server/static/js/: button.js  index.js  navbar.js  pricing.js  profile.js
server/templates/: 404.html  500.html  auth.html  index.html  navbar.html  pricing.html  privacy.html  profile.html
server/utils/: auth_user.py
sql/: _succesful_pay.sql  _update_user_activity.sql  get_user_data.sql  trigger_succesful_pay.sql  trigger_update_user_activity.sql
src/: __init__.py  app.py  handlers.py  kb.py  messages.py  parser.py  states.py  text.py
src/core/: __init__.py  config.py  err.py  exceptions.py  log_cfg.py  metric.py  path.py
src/db/: __init__.py  database.py  ddl.py  models.py  utils.py
src/db/migrations/: env.py
src/db/models/: __init__.py  enums.py  news.py  notifications.py  reports.py  transactions.py  userdata.py  wg_config.py  yoomoney.py
src/db/sql/: _delete_old_transactions.sql  _succesful_pay.sql  _unfreeze_configs.sql  _update_user_activity.sql  _update_user_status.sql  trigger_old_transactions.sql  trigger_succesful_pay.sql  trigger_update_user_activity.sql  trigger_update_user_status.sql
src/db/utils/: __init__.py  admin.py  news.py  notifications.py  redis.py  reports.py  save.py  (+4 more)
src/handlers/: __init__.py  account.py  admin.py  ban.py  bug.py  group.py  info.py  payment.py  service.py  user_service.py  wg_service.py
src/notices/: pay.py
src/scheduler/: balance.py  config_freezer.py  dump.py  notices.py  pay.py
src/scripts/: authorize.py  create_docs.py  db_add_news.py  db_backup.py  db_dump.py  db_recover.py  db_recreate.py  jwt_secret.py  news.ipynb
src/wg/: IPgen.py  config.sh  connect.py  pywg.py  utils.py
tests/: test_get_user.py  test_insert.py
(+26 files in other folders)
