[tool.poetry]
name = "vpn_dan_bot"
version = "0.1.0"
description = ""
authors = ["zveropolis <zadira-era@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic-settings = "^2.4.0"
aiogram = "^3.12.0"
pandas = "^2.2.2"
asyncssh = "^2.16.0"
pytils = "^0.4.1"
pyqrcode = "^1.2.1"
pypng = "^0.20220715.0"
openpyxl = "^3.1.5"
random-word = "^1.0.11"
apscheduler = "^3.10.4"
sentry-sdk = "^2.14.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
ipykernel = "^6.29.5"


[tool.poetry.group.database.dependencies]
asyncpg = "^0.29.0"
sqlalchemy = "^2.0.34"
redis = "^5.0.8"


[tool.poetry.group.pay.dependencies]
yoomoney = "^0.1.1"
requests = "^2.32.3"


[tool.poetry.group.server.dependencies]
fastapi = {extras = ["all"], version = "^0.112.2"}
uvicorn = {extras = ["standard"], version = "^0.30.6"}
requests = "^2.32.3"
fastui = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# [tool.poetry.scripts]
# start = "_serv:start"