[tool.poetry]
name = "vpn-dan-bot"
version = "0.2.3"
description = "test python 3.12"
authors = ["daniil-mazurov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.6.0"
aiogram = "^3.13.1"
pandas = "^2.2.3"
asyncssh = "^2.17.0"
pytils = "^0.4.1"
pyqrcode = "^1.2.1"
pypng = "^0.20220715.0"
openpyxl = "^3.1.5"
random-word = "^1.0.11"
apscheduler = "^3.10.4"
sentry-sdk = "^2.17.0"
aiohttp = "^3.10.10"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
ipykernel = "^6.29.5"


[tool.poetry.group.database.dependencies]
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
redis = "^5.1.1"


[tool.poetry.group.pay.dependencies]
yoomoney = "^0.1.1"
requests = "^2.32.3"


[tool.poetry.group.server.dependencies]
fastapi = {extras = ["all"], version = "^0.115.3"}
uvicorn = {extras = ["standard"], version = "^0.32.0"}
requests = "^2.32.3"
fastui = "^0.7.0"
pyjwt = "^2.9.0"
passlib = "^1.7.4"
bcrypt = "^4.2.0"
wheel = "^0.44.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
